--- a/index.html
+++ b/index.html
@@ -107,55 +107,14 @@
                     <li><a class="header-a" href="notas.html">Notas</a></li>
                 </ul>
             </nav>
-        </div>
-
-        <div class="search-input-box">
-            <input type="text" id="searchInput" class="searchInput" placeholder="🔍  Buscar en la web" style="background-color: #444444;">
         </div> 
     </div>
     <a href="#" id="searchLink"></a>
-
-    <div class="shortcuts">
-        <div class="shortcut1">
-            <div class="shortcut-cont">
-                <a class="shortcut-link" href="https://youtube.com" id="shortcut-link1">
-                    <img src="https://cdn-icons-png.flaticon.com/512/174/174883.png" class="shortcut-img">
-                </a>
-            </div>
-            <div class="shortcut-text"><span>Youtube</span></div>
-        </div>
-
-        <div class="shortcut2">
-            <div class="shortcut-cont">
-                <a class="shortcut-link" href="https://mail.google.com/mail">
-                    <img src="https://cdn-icons-png.flaticon.com/512/5968/5968534.png" class="shortcut-img">
-                </a>
-            </div>
-            <div class="shortcut-text"><span>Gmail</span></div>
-        </div>
-
-        <div class="shortcut3">
-            <div class="shortcut-cont">
-                <a class="shortcut-link" href="https://www.office.com/?auth=2">
-                    <img src="https://cdn-icons-png.flaticon.com/512/732/732221.png" class="shortcut-img">
-                </a>
-            </div>
-            <div class="shortcut-text"><span>Microsoft365</span></div>
-        </div>
-
-        <div class="shortcut4">
-            <div class="shortcut-cont">
-                <a class="shortcut-link" href="https://GitHub.com">
-                    <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" class="shortcut-img">
-                </a>
-            </div>
-            <div class="shortcut-text"><span>GitHub</span></div>
+    <div class="centro">
+        <div class="search-input-box">
+            <input type="text" id="searchInput" class="searchInput" placeholder="🔍  Buscar en la web" style="background-color: #444444;">
         </div>
     </div>
-
-
-    
-
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/busqueda.js"></script>
