--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
         </div>
     </div>
 
+    <script src="js/api.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/busqueda.js"></script>
     <script src="js/ajustes.js"></script>
